<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.voovan</groupId>
    <artifactId>voovan-parent</artifactId>
    <version>5.0.0</version>
    <packaging>pom</packaging>
    <name>Voovan-parent</name>
    <url>https://git.oschina.net/helyho/Voovan</url>
    <description>Voovan is a java framwork and it not depends on any third-party framework.</description>

    <modules>
        <module>Common</module>
        <module>Database</module>
        <module>Network</module>
        <module>Web</module>
        <module>All</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Source -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Java jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifestFile>
                            src/main/resources/META-INF/MANIFEST.MF
                        </manifestFile>
                    </archive>
                </configuration>
            </plugin>
            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <additionalJOptions>
                        <additionalJOption>--add-exports</additionalJOption>
                        <additionalJOption>java.base/jdk.internal.misc=ALL-UNNAMED</additionalJOption>
                    </additionalJOptions>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <organization>
        <name>Voovan</name>
    </organization>

    <scm>
        <connection>
            scm:git:https://github.com/helyho/Voovan
        </connection>
        <developerConnection>
            scm:git:https://github.com/helyho/Voovan
        </developerConnection>
    </scm>

    <issueManagement>
        <url>https://github.com/helyho/Voovan/issues</url>
        <system>github</system>
    </issueManagement>

    <developers>
        <developer>
            <name>helyho</name>
            <email>helyho@gmail.com</email>
            <organization>voovan</organization>
            <organizationUrl>https://www.voovan.org</organizationUrl>
        </developer>
    </developers>

</project>
